<resources>
    <string name="app_name">App5.1</string>
    <string name="main_head">Компании</string>
    <string name="add">Добавить</string>
    <string name="add_company_head">Добавить компанию</string>
    <string name="change_company_head">Изменить компанию</string>
    <string name="company">Компания</string>
    <string name="save">Сохранить</string>
    <string name="founder">Основатель</string>
    <string name="product">Продукт</string>
</resources>