<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:a="http://schemas.android.com/apk/res/android"
    a:layout_width="match_parent"
    a:layout_height="match_parent"
    a:orientation="vertical"
    >

    <TextView
        a:id="@+id/change_add_head"
        a:layout_width="match_parent"
        a:layout_height="wrap_content"
        a:text="@string/add_company_head"
        a:fontFamily="@font/roboto_regular"
        a:textSize="34sp"
        a:layout_margin="10dp"
        a:gravity="center"
        a:textColor="@color/black"
        />
        <EditText
            a:id="@+id/company_edit_text"
            a:layout_width="match_parent"
            a:layout_height="wrap_content"
            a:inputType="textPersonName"
            a:text=""
            a:fontFamily="@font/roboto_regular"
            a:textSize="15sp"
            a:hint="@string/company"
            a:layout_marginHorizontal="10dp"
            />
        <EditText
            a:id="@+id/founder_edit_text"
            a:layout_width="match_parent"
            a:layout_height="wrap_content"
            a:inputType="textPersonName"
            a:text=""
            a:fontFamily="@font/roboto_regular"
            a:textSize="15sp"
            a:hint="@string/founder"
            a:layout_margin="10dp"
            />
        <EditText
            a:id="@+id/product_edit_text"
            a:layout_width="match_parent"
            a:layout_height="wrap_content"
            a:inputType="textPersonName"
            a:text=""
            a:fontFamily="@font/roboto_regular"
            a:textSize="15sp"
            a:hint="@string/product"
            a:layout_marginHorizontal="10dp"
            />

    <Button
        a:id="@+id/save_company_button"
        a:layout_width="wrap_content"
        a:layout_height="wrap_content"
        a:text="@string/save"
        a:layout_marginVertical="10dp"
        a:layout_gravity="center"
        a:gravity="center"

        />

</LinearLayout>